@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 04-03-2005 fixed: my music, no thumbs for songs in database views when coverart is loaded from tags
   - 04-03-2005 fixed: thumb cache in musicdatabase is not cleared after scanning
   - 04-03-2005 added: wma tag loader, support for multiple artists and genres
   - 04-03-2005 changed: Reversed Clear() change as it caused graphics leak through when UI calibration was not at 0,0.
